--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul class="menu">
         <li><a href="register.html" target="_blank">Register</a></li>
         <li><a href="#work">Openforum</a></li>
-        <li><a href="#about">e-Repository</a></li>
+        <li><a href="#e-repo">e-Repository</a></li>
         <li><a href="#careers">My Wall</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
@@ -79,7 +79,7 @@
             alt="code-img"
           />
 
-          <h3>e-Repository</h3>
+          <h3 id="e-repo">e-Repository</h3>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, ab
             itaque quis maiores tempore numquam, rem consectetur, qui libero
