--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="utf-8" />
     <title>e-Exam Portal</title>
     <link rel="stylesheet" href="index.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -16,7 +15,7 @@
       <input class="menu-btn" type="checkbox" id="menu-btn" />
       <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
       <ul class="menu">
-        <li><a href="register.html" target="_blank">Register</a></li>
+        <li><a href="register.html" target="_blank">Login/Register</a></li>
         <li><a href="#work">Openforum</a></li>
         <li><a href="#e-repo">e-Repository</a></li>
         <li><a href="#careers">My Wall</a></li>
@@ -27,20 +26,58 @@
         
       <!-- <img class="top-cloud" src="images/cloud.png" alt="cloud" /> -->
       <div class="title-text">
-        <h1>Welcome to e-Exam Portal</h1>
-        <h3><i>"Exams don't decide your future. You do."</i></h3>
+        <h1>Welcome Aspirant!</h1>
+        <h3><b>to India's #1 One-Stop Exam Portal.</b></h3>
       </div>
       <!-- <img class="probg" src="" alt="img" /> -->
     </div>
 
     <div class="middle-container">
       <div class="description">
-        <h2>About us.</h2>
-        <p class="intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt explicabo at cumque delectus id ipsum error, unde nisi sequi quia?</p>
+        <div id="desc-content">
+          <h2>About Us.</h2>
+            <p class="intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt explicabo at cumque delectus id ipsum error, unde nisi sequi quia?</p>
+        </div>
+      </div>
+      <h2>Upcoming Exams.</h2>
+      <div class="row">
+        <div class="column">
+          <div class="card">
+            <img src="" alt="">
+            <h3>JEE Mains</h3>
+            <p>National Testing Agency</p>
+            <p>9th April 2023</p>
+            <button>Apply</button>
+          </div>
+        </div>
+        <div class="column">
+          <div class="card">
+            <h3>NEET</h3>
+            <p>National Testing Agency</p>
+            <p>13rd April 2023</p>
+            <button>Apply</button>
+          </div>
+        </div>
+        <div class="column">
+          <div class="card">
+            <h3>UPSC Prelims</h3>
+            <p>Union Public Service Commission</p>
+            <p>20th April 2023</p>
+            <button>Apply</button>
+          </div>
+        </div>
+        <div class="column">
+          <div class="card">
+            <h3>SSC</h3>
+            <p>Staff Selection Commission</p>
+            <p>29th April 2023</p>
+            <button>Apply</button>
+          </div>
+        </div>
       </div>
       <hr />
       <div class="services">
-        <h2>Our services.</h2>
+        <h2>Our Services.</h2>
         <div class="service-row">
           <img
             class="c1-img"
