added form validation

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="ag-format-container">
         <div class="ag-exams_box">
           <div class="ag-exams_item">
-            <a href="#" class="ag-exams-item_link">
+            <a href="jee-main.html" class="ag-exams-item_link">
               <div class="ag-exams-item_bg"></div>
       
               <div class="ag-exams-item_title">
