--- a/register.html
+++ b/register.html
@@ -73,11 +73,10 @@ hr {
 
   <body>
     <header class="header">
-      <a href="" class="logo">e-Exam</a>
+      <a href="index.html" class="logo">e-Exam</a>
       <input class="menu-btn" type="checkbox" id="menu-btn" />
       <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
       <ul class="menu">
-        <li><a href="register.html" target="_blank">Register</a></li>
         <li><a href="#work">Openforum</a></li>
         <li><a href="#about">e-Repository</a></li>
         <li><a href="#careers">My Wall</a></li>
@@ -89,7 +88,7 @@ hr {
     </div>
 
     <div class="middle-container">
-        <form action="action_page.php">
+        <form action="action_page.php" onsubmit="return validate();">
             <div class="container">
               <h1>Register</h1>
               <p>Please fill in this form to create an account.</p>
@@ -101,8 +100,9 @@ hr {
               <label for="psw"><b>Password</b></label>
               <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
           
-              <label for="psw-repeat"><b>Repeat Password</b></label>
+              <!-- <label for="psw-repeat"><b>Repeat Password</b></label>
               <input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required>
+              <hr> -->
               <hr>
           
               <p>By creating an account you agree to our <a class="link" href="#">Terms & Privacy</a>.</p>
@@ -121,5 +121,6 @@ hr {
       <a class="footer-link" href="">Website</a>
       <p class="copyright">© 2023 All rights reserved.</p>
     </div>
+    <script src="register.js"></script>
   </body>
 </html>
