--- a/register.html
+++ b/register.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8" />
     <title>e-Exam Portal</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento"
+      href="https://fonts.googleapis.com/css2?family=Nunito&display=swap"
       rel="stylesheet"
     />
     <style>
