--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <input class="menu-btn" type="checkbox" id="menu-btn" />
       <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
       <ul class="menu">
-        <li><a href="register.html" target="_blank">Login/Register</a></li>
+        <li><a href="register.html">Login/Register</a></li>
         <li><a href="#work">Openforum</a></li>
         <li><a href="#e-repo">e-Repository</a></li>
         <li><a href="#careers">My Wall</a></li>
